--- a/src/components/AlbumDetails/index.css
+++ b/src/components/AlbumDetails/index.css
@@ -55,7 +55,7 @@
   text-align: center;
 }
 .album-type {
-  display: none;
+  display: flex;
 }
 .album-artist {
   font-family: 'Inter';
@@ -144,10 +144,13 @@ span {
 }
 @media (max-width: 767px) {
   .track-headings {
-    display: none;
+    display: flex;
   }
   .line {
-    display: none;
+    display: flex;
+  }
+  .album-tracks-list {
+    display: flex;
   }
 }
 
