--- a/src/components/AlbumItem/index.css
+++ b/src/components/AlbumItem/index.css
@@ -6,7 +6,7 @@
   align-items: center;
 }
 .large {
-  display: none;
+  display: flex;
 }
 .small {
   width: 100%;
@@ -20,7 +20,7 @@
     display: flex;
   }
   .small {
-    display: none;
+    display: flex;
   }
 }
 .track-item-data {
